# TradeBot_v2

./: .gitignore  pyproject.toml  start.sh  upd.sh
bybit/: pyproject.toml
bybit/bybit/: client.py  config.py  constants.py  errors.py  execution.py  order.py  position.py  position_trade_wrapper.py  self_written_client.py  settings.py
database/: pyproject.toml
database/database/: __init__.py  init.py
database/database/models/: pyproject.toml
database/database/models/models/: user.py
start/start/: main.py  teststart.py  trade_teststart.py  ui_telegram_teststart.py
strategies/: README.MD  pyproject.toml
strategies/strategies/: classic_strategy.py  constants.py  instruments.py  main.py  messages.py  orders.py  positions.py  settings.py  test_strategy.py  user_info.py
ui/: pyproject.toml
ui/ui/telegram/: pyproject.toml
ui/ui/telegram/telegram/: backgroundtasks.py  bot.py  config.py
ui/ui/telegram/telegram/app/: pyproject.toml
ui/ui/telegram/telegram/app/app/handlers/: pyproject.toml
ui/ui/telegram/telegram/app/app/handlers/handlers/: addtraidingpair.py  adduser.py  allusers.py  apikeys.py  changedepo.py  closepos.py  common.py  deletedata.py  getstatistics.py  start.py  traidingpairs.py
ui/ui/telegram/telegram/app/app/keyboards/: pyproject.toml
ui/ui/telegram/telegram/app/app/keyboards/keyboards/: buttons.py  simple_row.py
ui/ui/telegram/telegram/app/app/template_messages/: pyproject.toml
ui/ui/telegram/telegram/app/app/template_messages/template_messages/: template_messages.py
